@@ -14,7 +14,7 @@
 #undef APSTUDIO_READONLY_SYMBOLS
 
 /////////////////////////////////////////////////////////////////////////////
-// Englisch (USA) resources
+// English (U.S.) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 #ifdef _WIN32
@@ -58,14 +58,14 @@ BEGIN
     CONTROL         "",IDC_DRAWING_ORDER_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,282,186
 END
 
-IDD_SEARCH_SELECT_ELEMENT DIALOGEX 0, 0, 190, 183
+IDD_SEARCH_SELECT_ELEMENT DIALOGEX 0, 0, 328, 183
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Search/Select element"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LISTBOX         IDC_ELEMENT_LIST,7,7,178,149,LBS_SORT | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | WS_VSCROLL | WS_TABSTOP
     DEFPUSHBUTTON   "&Select",IDOK,75,162,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,135,162,50,14
+    CONTROL         "",IDC_ELEMENT_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,3,5,321,150
 END
 
 IDD_SOUNDDIALOG DIALOGEX 0, 0, 515, 172
@@ -2431,7 +2431,7 @@ BEGIN
     IDS_STEP                "Step"
 END
 
-#endif    // Englisch (USA) resources
+#endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
 
